--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-firebase-admin
-yagmail
-schedule
-pandas
-plotly
-sqlalchemy
-huggingface-hub
-wordcloud
-matplotlib
-numpy
+streamlit==1.40.1
+firebase-admin==6.6.0
+yagmail==0.15.293
+schedule==1.2.2
+pandas==2.2.3
+plotly==5.24.1
+sqlalchemy==2.0.36
+huggingface-hub==0.26.2
+wordcloud==1.9.4
+matplotlib==3.9.2
+numpy==2.1.3
